Resolves: tdf#125490 use a single get_text impl for treeview

Change-Id: Id9f74d8660fbd706251c9ea759b27a873b9113c6